z-index fix

--- a/src/styles/nav.less
+++ b/src/styles/nav.less
@@ -16,7 +16,7 @@
 .main-nav {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 100000;
   min-height: @navheight;
 
   background-color: fade(@background-color-base, 90%);
